Release for java 8